Eevee OpenVDB Bad Horizontal Bars #76510

Closed
opened 2020-05-07 16:14:07 +02:00 by Atomic · 4 comments

System Information
Operating system: Windows 7 SP1
Graphics card: nVidia 660GTX
system-info.txt

Blender Version
Broken: 2.90 (sub 0), branch: master, commit date: 2020-04-16 20:43, hash: 27e39cc533, type: Release build date: 2020-04-16, 19:24:03

Short description of error
On some frames of an OpenVDB sequence Eevee produces bad results rendering straight vertical or horizontal bars from the center to the edge of the bounding box.
Untitled-1.jpg

Here is the same frame in Houdini, which does not display the bad horz/vert bars.
Untitled-2.jpg

Exact steps for others to reproduce the error
Open the blend file and place Eevee in lighted render mode.
open_VDB_render_error.zip

**System Information** Operating system: Windows 7 SP1 Graphics card: nVidia 660GTX [system-info.txt](https://archive.blender.org/developer/F8518505/system-info.txt) **Blender Version** Broken: 2.90 (sub 0), branch: master, commit date: 2020-04-16 20:43, hash: 27e39cc53312, type: Release build date: 2020-04-16, 19:24:03 **Short description of error** On some frames of an OpenVDB sequence Eevee produces bad results rendering straight vertical or horizontal bars from the center to the edge of the bounding box. ![Untitled-1.jpg](https://archive.blender.org/developer/F8518490/Untitled-1.jpg) Here is the same frame in Houdini, which does not display the bad horz/vert bars. ![Untitled-2.jpg](https://archive.blender.org/developer/F8518493/Untitled-2.jpg) **Exact steps for others to reproduce the error** Open the blend file and place Eevee in lighted render mode. [open_VDB_render_error.zip](https://archive.blender.org/developer/F8518497/open_VDB_render_error.zip)
Author

Added subscriber: @AtomP

Added subscriber: @AtomP
Author

I also see the same problem running Blender 2.9 on Ubuntu using a gtx 1070.
open_vdb_voxel_glitch.mp4

I also see the same problem running Blender 2.9 on Ubuntu using a gtx 1070. [open_vdb_voxel_glitch.mp4](https://archive.blender.org/developer/F8518510/open_vdb_voxel_glitch.mp4)

This issue was referenced by 05fafb05b1

This issue was referenced by 05fafb05b199729916f10504336747a504cf8563

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-07 22:05:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76510
No description provided.