Fix T76510: Eevee OpenVDB render artifacts due to texture clamping